# yolo_ros

./: README.md  pyproject.toml
yolo_bringup/: package.xml
yolo_msgs/: package.xml
yolo_ros/: package.xml  setup.py
yolo_ros/yolo_ros/: debug_node.py  yolo_node.py
yolo_smarc_actions/: CMakeLists.txt  package.xml
yolo_smarc_actions/launch/: smarc_yolo_action_launch.py
yolo_smarc_actions/scripts/: yolo_action.py
