<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_smarc_actions</name>
  <version>0.0.0</version>
  <description>SMaRC action servers for controlling yolo</description>
  <maintainer email="nro@kth.se">niklas</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>

  <build_depend>pkg-config</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
